# lab-scale-ai-draft-tasks

./: README.md
datasets/councils/: .gitignore  .pre-commit-config.yaml  Justfile  pyproject.toml
datasets/councils/src/: main.py
tasks/: Llama-2-7b-chat-hf_finetuned_model_outputs.npy  Llama-2-7b-chat-hf_pretrained_model_oneshot_outputs.json  Llama-2-7b-chat-hf_pretrained_model_oneshot_outputs.npy  Llama-2-7b-chat-hf_pretrained_model_outputs.npy  Llama-2-7b-chat-hf_pretrained_model_twoshot_outputs.json  Llama-2-7b-chat-hf_pretrained_model_twoshot_outputs.npy  Llama-2-7b-chat-hf_pretrained_model_zeroshot_outputs.json  Llama-2-7b-chat-hf_pretrained_model_zeroshot_outputs.npy  Mistral-7B-Instruct-v0.1_finetuned_model_outputs.npy  Mistral-7B-Instruct-v0.1_pretrained_model_oneshot_outputs.json  Mistral-7B-Instruct-v0.1_pretrained_model_oneshot_outputs.npy  Mistral-7B-Instruct-v0.1_pretrained_model_outputs.npy  Mistral-7B-Instruct-v0.1_pretrained_model_twoshot_outputs.json  Mistral-7B-Instruct-v0.1_pretrained_model_twoshot_outputs.npy  Mistral-7B-Instruct-v0.1_pretrained_model_zeroshot_outputs.json  Mistral-7B-Instruct-v0.1_pretrained_model_zeroshot_outputs.npy  README.md  evaluate_classification.py  evaluate_em.py  evaluate_functions.py  evaluate_summarization.py  evaluate_summarization_cross.py  evaluate_summarization_privacy.py  evaluation_finetune.py  evaluation_pretrain.py  experiments.sh  falcon-7b-instruct_finetuned_model_outputs.npy  falcon-7b-instruct_pretrained_model_oneshot_outputs.json  falcon-7b-instruct_pretrained_model_oneshot_outputs.npy  falcon-7b-instruct_pretrained_model_outputs.npy  falcon-7b-instruct_pretrained_model_twoshot_outputs.json  falcon-7b-instruct_pretrained_model_twoshot_outputs.npy  falcon-7b-instruct_pretrained_model_zeroshot_outputs.json  falcon-7b-instruct_pretrained_model_zeroshot_outputs.npy  finetune.py  finetune_em_openai.py  finetune_functions.py  finetune_summarization.py  finetune_summarization_openai.py  generate_from_hf_model.py  (+2 more)
tasks/results/: Llama-2-7b-chat-hf_finetuned_model_oneshot_outputs.json  Llama-2-7b-chat-hf_finetuned_model_oneshot_outputs.npy  Llama-2-7b-chat-hf_finetuned_model_threeshot_outputs.json  Llama-2-7b-chat-hf_finetuned_model_threeshot_outputs.npy  Llama-2-7b-chat-hf_finetuned_model_twoshot_outputs.json  Llama-2-7b-chat-hf_finetuned_model_twoshot_outputs.npy  Llama-2-7b-chat-hf_finetuned_model_zeroshot_outputs.json  Llama-2-7b-chat-hf_finetuned_model_zeroshot_outputs.npy  Llama-2-7b-chat-hf_pretrained_model_oneshot_outputs.json  Llama-2-7b-chat-hf_pretrained_model_twoshot_outputs.json  Llama-2-7b-chat-hf_pretrained_model_twoshot_outputs.npy  Llama-2-7b-chat-hf_pretrained_model_zeroshot_outputs.json  Mistral-7B-Instruct-v0.1_finetuned_model_oneshot_outputs.json  Mistral-7B-Instruct-v0.1_finetuned_model_oneshot_outputs.npy  Mistral-7B-Instruct-v0.1_finetuned_model_twoshot_outputs.json  Mistral-7B-Instruct-v0.1_finetuned_model_twoshot_outputs.npy  Mistral-7B-Instruct-v0.1_finetuned_model_zeroshot_outputs.json  Mistral-7B-Instruct-v0.1_finetuned_model_zeroshot_outputs.npy  Mistral-7B-Instruct-v0.1_pretrained_model_oneshot_outputs.npy  (+69 more)
